Projeto final com footer

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -31,6 +31,14 @@ body{
   background-color:#dddddd;
 }
 
+.foot{
+  background-color:#222831;
+  height:80px;
+  margin-top: 72px;
+}
+
+
+
 .navegação{
   background-color:#222831;
   height:25px;
